...
                            .foregroundColor(.white)
                            .frame(maxWidth: .infinity)
                            .padding()
                            .background(Color.white.opacity(0.15))
                            .cornerRadius(24)
                    }
                    .accessibilityIdentifier("authEntry_login")

                    Button(action: { showSignUpMethods = true }) {
                        Text("新規会員登録")
                            .fontWeight(.bold)
                            .foregroundColor(.white)
                            .frame(maxWidth: .infinity)
...
